RESOLVED FIXED75452
If argument to Error is undefined, message is not set
https://bugs.webkit.org/show_bug.cgi?id=75452
Summary If argument to Error is undefined, message is not set
Gavin Barraclough
Reported 2012-01-02 15:51:37 PST
We currently set message to the empty string.
Attachments
Fix (4.49 KB, patch)
2012-01-02 16:21 PST, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2012-01-02 16:21:41 PST
Sam Weinig
Comment 2 2012-01-02 20:09:33 PST
Comment on attachment 120899 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=120899&action=review > LayoutTests/fast/js/native-error-prototype-expected.txt:1 > +This is a test case for bug 55346 and bug 70889 https://bugs.webkit.org/show_bug.cgi?id=75452. :\ > LayoutTests/fast/js/script-tests/native-error-prototype.js:2 > +'This is a test case for <a href="https://bugs.webkit.org/show_bug.cgi?id=55346">bug 55346</a> and <a href="https://bugs.webkit.org/show_bug.cgi?id=70889">bug 70889</a> https://bugs.webkit.org/show_bug.cgi?id=75452.' The grammar here could use some updating.
Gavin Barraclough
Comment 3 2012-01-02 22:57:07 PST
> The grammar here could use some updating. Ooops, I made the grammar better good. Fixed in r103924
Note You need to log in before you can comment on or make changes to this bug.