https://bugs.webkit.org/show_bug.cgi?id=75452 If argument to Error is undefined, message is not set

Reviewed by Sam Weinig.

Source/JavaScriptCore:

Per section 15.11.1.1 of the spec.

* runtime/ErrorInstance.h:
(JSC::ErrorInstance::create):
(JSC::ErrorInstance::finishCreation):

LayoutTests:

Added test case.

* fast/js/native-error-prototype-expected.txt:
* fast/js/script-tests/native-error-prototype.js:



Canonical link: https://commits.webkit.org/92222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103924 268f45cc-cd09-0410-ab3c-d52691b4dbfc